# Carl

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json
AgentCarl/: CMakeLists.txt
AgentCarl/include/: PayloadError.h  PayloadHandle.h  Types.h
AgentCarl/include/Platform/: Win32ErrorMessage.h  Win32HandleHelper.h  Win32PayloadHandle.h
AgentCarl/src/: AgentCarl.cpp  PayloadHandle.cpp
AgentCarl/src/Platform/: Win32ErrorMessage.cpp  Win32PayloadHandle.cpp
Carl/: CMakeLists.txt
Carl/include/: Carl.h  CarlPayload.h
Carl/include/Carl/: AgentRunner.h  CarlError.h  Defines.h  PayloadConnector.h  ProcessArchitecture.h  Types.h
Carl/include/Carl/Platform/: Win32AgentRunner.h  Win32ErrorMessage.h  Win32ProcessArchitecture.h
Carl/src/: AgentRunner.cpp  Carl.cpp  PayloadConnector.cpp  ProcessArchitecture.cpp
Carl/src/Platform/: Win32AgentRunner.cpp  Win32ErrorMessage.cpp  Win32ProcessArchitecture.cpp
TestInjector/: CMakeLists.txt  TestInjector.cpp
TestPayload/: CMakeLists.txt  CarlDetour.h  CarlEntryPoint.h  GetFuncFromObjVTable.h  MyAudioClient.h  TestPayload.cpp
